Update charm examples based on recent changes

--- a/examples/dummy-vhost/templates/index.html
+++ b/examples/dummy-vhost/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Charmbase Link</title>
+<title>Operator Framework Link</title>
 </head>
 <body>
-<a href="https://github.com/canonical/charmbase" rel="nofollow">Charmbase repository link</a>
+<a href="https://github.com/canonical/operator" rel="nofollow">Charmbase repository link</a>
 </body>
 </html>
